[gd_scene load_steps=2 format=3 uid="uid://b25uauf2yoa3p"]

[ext_resource type="Script" uid="uid://cnt00p2av8dm6" path="res://Menus/Options Menu/General Buttons/difficulty_button.gd" id="1_y66rm"]

[node name="Diffculty_button" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y66rm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="dif_label" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Diffculty"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="description_label" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "[description goes here]"

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 30

[connection signal="item_selected" from="HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
